# foundry-router

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
contrib/gateway-admin-service/: gateway_inspect_service.py
docs/: CODE_SANDBOX.md  CONVENTIONS.md  GATEWAY_SERVERS.md  README.md
foundry_router/: __init__.py  __main__.py  config.py  db.py  errors.py  evalharness.py  gateway_admin.py  guardrails.py  insights.py  logbuffer.py  main.py  personas.py  schema.sql  semcache.py  usage.py
tests/: conftest.py  test_agent_brain_messages.py  test_backend_test_probe.py  test_batch_fixes.py  test_benchmark_integrity.py  test_brain_health.py  test_brain_retry.py  test_brain_role.py  test_branding.py  test_category_blend.py  test_claude_cost_tier.py  test_client_compat.py  test_code_sandbox.py  test_context_length.py  test_cross_pass_conflation.py  test_devlog.py  test_embedding_exclusion.py  test_error_handling.py  test_eval_harness.py  test_extraction_shape_guard.py  test_facade.py  test_fallback.py  test_feedback_tracking.py  test_gateway_admin.py  test_heartbeat_toolcalls.py  test_log_clear.py  test_mcp_secret.py  test_mcp_usage.py  test_multimodal.py  test_named_benchmarks.py  test_oauth_monitoring.py  test_observed_scoring.py  test_ollama_admin.py  test_openai_facade.py  test_outcome_judge.py  test_persona_expansion.py  test_personas.py  test_pipeline.py  test_pool_failover.py  test_prefer_loaded.py  (+21 more)
(+30 files in other folders)
